# taskforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/taskforge/: __main__.py  cli.py
src/taskforge/domain/: task.py
src/taskforge/services/: tracker.py
src/taskforge/storage/: json_repo.py  repository.py
tests/: test_json_repo.py  test_task.py  test_tracker.py
