[project]
name = "taskforge"
version = "0.1.0"
description = "A clean task tracking engine."
authors = [{ name = "Rasti" }]
requires-python = ">=3.10"
dependencies = [
 
  ]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
addopts = "--cov=taskforge"
testpaths = ["tests"]


[project.scripts]
taskforge = "taskforge.cli:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
  "src/taskforge/cli.py",
  "src/taskforge/__main__.py",
  "src/taskforge/storage/repository.py"
]

[tool.setuptools.packages.find]
where = ["src"]


