[project]
name = "taskforge-rasti"
version = "0.1.0"
description = "A clean minimal task tracking engine with layered architecture."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rasti" }
]


[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
addopts = "--cov=taskforge"
testpaths = ["tests"]


[project.scripts]
taskforge = "taskforge.cli:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
  "src/taskforge/cli.py",
  "src/taskforge/__main__.py",
  "src/taskforge/storage/repository.py"
]

[tool.black]
line-length = 88

license = {text = "MIT"}
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]



[tool.setuptools.packages.find]
where = ["src"]


